# QuantumChem

./: CMakeLists.txt
src/: main.cpp
src/libgeom/: Atom.h
src/libmath/: Gaussian.h  kinetic.cpp  kinetic.h  nucAttraction.cpp  nucAttraction.h  overlap.cpp  overlap.h  twoElectronRepulsion.cpp  twoElectronRepulsion.h
